// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - state allocates fee to recipient when delta is above zero 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 122376,
}
`;

exports[`EthVault - state applies penalty when delta is below zero 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 119557,
}
`;

exports[`EthVault - state updates exit queue 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 151687,
}
`;
